--- a/starter/index.html
+++ b/starter/index.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><a href="../starter/index.html" class="active"><strong aria-hidden="true">2.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/config.html"><strong aria-hidden="true">2.1.</strong> Robot Config</a></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li class="chapter-item expanded "><a href="../state_machine/index.html"><strong aria-hidden="true">4.</strong> The State Machine</a></li><li class="chapter-item expanded "><a href="../hardware/index.html"><strong aria-hidden="true">5.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../vcs/index.html"><strong aria-hidden="true">6.</strong> Version Control</a></li><li class="chapter-item expanded "><a href="../meta/index.html"><strong aria-hidden="true">7.</strong> Metaprogramming</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../meta/logger.html"><strong aria-hidden="true">7.1.</strong> Logger</a></li><li class="chapter-item expanded "><a href="../meta/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../deps/index.html"><strong aria-hidden="true">8.</strong> Dependencies</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/index.html" class="active"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><a href="../state_machine/index.html"><strong aria-hidden="true">4.</strong> The State Machine</a></li><li class="chapter-item expanded "><a href="../hardware/index.html"><strong aria-hidden="true">5.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../vcs/index.html"><strong aria-hidden="true">6.</strong> Version Control</a></li><li class="chapter-item expanded "><a href="../meta/index.html"><strong aria-hidden="true">7.</strong> Metaprogramming</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../meta/logger.html"><strong aria-hidden="true">7.1.</strong> Logger</a></li><li class="chapter-item expanded "><a href="../meta/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../deps/index.html"><strong aria-hidden="true">8.</strong> Dependencies</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -140,7 +140,7 @@
  ├── MyRobotCfg.java
  └── MyTeleOp.java
 </code></pre>
-<p>We will add the ElectronVolts library into the directory like so:</p>
+<p>Then add the ElectronVolts library into the directory like so:</p>
 <pre><code> java
  ├── MyRobotCfg.java
  ├── MyTeleOp.java
@@ -150,7 +150,87 @@
      ├── evlib
      ┆   └┄┄
 </code></pre>
-<p>Once you've set up those two files, you can start writing FTC code.</p>
+<p>Once you've set up those files, you can start writing FTC code.</p>
+<p>The end product should look something like below. Read on to see a quick breakdown of this code.</p>
+<pre><code class="language-java">MyRobotCfg.java
+
+import com.qualcomm.robotcore.hardware.DcMotor;
+import com.qualcomm.robotcore.hardware.DcMotorEx;
+import com.qualcomm.robotcore.hardware.HardwareMap;
+import ftc.evlib.hardware.config.RobotCfg;
+
+public class MyRobotCfg extends RobotCfg {
+    private final DcMotor myMotor;
+
+    public DcMotor getMyMotor() {
+        return myMotor;
+    }
+
+    public MyRobotCfg(HardwareMap hardwareMap) {
+        super(hardwareMap);
+        myMotor = hardwareMap.get(DcMotorEx.class, &quot;bruh&quot;);
+    }
+
+    @Override
+    public void start() {}
+
+    @Override
+    public void act() {}
+
+    @Override
+    public void stop() {}
+}
+
+MyTeleOp.java
+
+import com.qualcomm.robotcore.eventloop.opmode.TeleOp;
+import com.qualcomm.robotcore.hardware.DcMotor;
+
+import ftc.electronvolts.util.Function;
+import ftc.electronvolts.util.Functions;
+import ftc.electronvolts.util.files.Logger;
+import ftc.evlib.opmodes.AbstractTeleOp;
+
+@TeleOp(name = &quot;My TeleOp&quot;)
+public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
+    DcMotor myMotor;
+
+    @Override
+    protected MyRobotCfg createRobotCfg() {
+        return new MyRobotCfg(hardwareMap);
+    }
+
+    @Override
+    protected Logger createLogger() {
+        return null;
+    }
+
+    @Override
+    protected void setup() {
+        myMotor = robotCfg.getMyMotor();
+    }
+
+    @Override
+    protected void setup_act() {}
+
+    @Override
+    protected void go() {}
+
+    @Override
+    protected void act() {
+        double power = gamepad1.left_trigger - gamepad1.right_trigger;
+        myMotor.setPower(power);
+    }
+
+    @Override
+    protected void end() {}
+
+    @Override
+    protected Function getJoystickScalingFunction() {
+        return Functions.linear(1.0);
+    }
+}
+</code></pre>
 
                     </main>
 
