deploy: e26c0ebfb7a9f358d741748b4d4aee11fa2f0c1d

--- a/intro/setup.html
+++ b/intro/setup.html
@@ -137,7 +137,7 @@
                         <p>Note: Whenever *nix is used here, it refers to operating systems which are somehow based off of Unix, such as Linux, BSD, and such (while excluding Apple operating systems). If you didn't understand some of those words, don't worry: You don't have to.</p>
 <h1 id="development-environment"><a class="header" href="#development-environment">Development Environment</a></h1>
 <h3 id="java"><a class="header" href="#java">Java</a></h3>
-<p><em>This step can usually be ignored, since most modern operating systems come with a Java installation</em></p>
+<p><em>This step can sometimes be ignored, since you'll already have Java if another app you have uses it.</em></p>
 <p>To start, you must first have Java installed. Java 8 or 11 should work, and if you can get Java 16, even better. For Windows or MacOS computers, go to <a href="https://www.oracle.com/java/technologies/downloads/">the Oracle site</a> and follow the installation instructions for your OS. For other *nix operating systems, follow the distribution-dependent instructions for installing java.</p>
 <h3 id="android-studio"><a class="header" href="#android-studio">Android Studio</a></h3>
 <blockquote>
