--- a/starter/program/index.html
+++ b/starter/program/index.html
@@ -151,7 +151,7 @@
      ┆   └┄┄
 </code></pre>
 <p>Once you've set up those files, you can start writing FTC code.</p>
-<p>The end product should look something like below. Read on to see a quick breakdown of this code.</p>
+<p>The end product should look something like below. This is just for later reference (i.e. when your code stops working), keep reading for the rest of the walkthrough.</p>
 <pre><code class="language-java">MyRobotCfg.java
 
 import com.qualcomm.robotcore.hardware.DcMotor;
@@ -185,7 +185,6 @@ MyTeleOp.java
 
 import com.qualcomm.robotcore.eventloop.opmode.TeleOp;
 import com.qualcomm.robotcore.hardware.DcMotor;
-
 import ftc.electronvolts.util.Function;
 import ftc.electronvolts.util.Functions;
 import ftc.electronvolts.util.files.Logger;
